--- a/workhub-front/package.json
+++ b/workhub-front/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.6.2",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
+    "sass": "^1.72.0",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
