--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,13 @@ dependencies {
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	implementation 'org.springframework.security:spring-security-crypto' // 스프링 시큐리티 암호화
 	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'  // 암호화에 필요한 라이브러리
-	// implementation "org.springframework.boot:spring-boot-starter-security"
+
+	// Spring Security
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation "org.springframework.security:spring-security-test"
 
 	// Querydsl
-	implementation 'com.querydsl:querydsl-core'
+	implementation 'com.querydsl:querydsl-core:5.0.0'
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
