UserDetailService를 이용한 로그인

--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-	implementation 'org.springframework.security:spring-security-crypto' // 스프링 시큐리티 암호화
 	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'  // 암호화에 필요한 라이브러리
 
 	// Spring Security
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.security:spring-security-test"
+	implementation 'org.springframework.security:spring-security-crypto' // 스프링 시큐리티 암호화
+	// implementation "org.springframework.session:spring-security-jdbc"
 
 	// Querydsl
 	implementation 'com.querydsl:querydsl-core:5.0.0'
