--- a/workhub-front/package.json
+++ b/workhub-front/package.json
@@ -1,43 +1,50 @@
 {
   "name": "workhub-front",
   "version": "0.0.0",
-  "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview --port 5050",
+    "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
+    "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress run'",
+    "test:unit": "cypress open-ct",
+    "test:unit:ci": "cypress run-ct --quiet --reporter spec",
+    "typecheck": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@js-joda/core": "^5.6.2",
+    "@tsconfig/node20": "^20.1.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "element-plus": "^2.6.2",
+    "class-transformer": "^0.5.1",
+    "element-plus": "^2.7.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.28",
+    "@cypress/vite-dev-server": "^5.0.7",
+    "@cypress/vue": "^6.0.0",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@types/node": "^20.12.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.1.2",
-    "prettier": "^3.0.3",
-    "sass": "^1.72.0",
-    "typescript": "~5.4.0",
-    "vite": "^5.1.6",
-    "vite-plugin-vue-devtools": "^7.0.18",
-    "vue-tsc": "^2.0.6"
+    "cypress": "^13.8.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-cypress": "^3.2.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.0",
+    "start-server-and-test": "^2.0.3",
+    "typescript": "~5.4.5",
+    "vite": "^5.2.11",
+    "vue-tsc": "^2.0.16"
   }
 }
