--- a/workhub-front2/package.json
+++ b/workhub-front2/package.json
@@ -13,9 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@js-joda/core": "^5.6.3",
     "axios": "^1.7.2",
+    "class-transformer": "^0.5.1",
     "element-plus": "^2.7.4",
+    "js-joda": "^1.11.0",
     "pinia": "^2.1.7",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
