--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'  // 암호화에 필요한 라이브러리
 
