--- a/workhub-front-react/package.json
+++ b/workhub-front-react/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
     "axios": "^1.7.7",
     "install": "^0.13.0",
     "npm": "^10.9.0",
